# arch-tools

./: Cargo.toml  README.md
src/: arch.rs  dependency_checker.rs  main.rs  menu.rs  package_manager.rs
src/installers/: apps.rs  browsers.rs  custom.rs  desktop.rs  full_setup.rs  gpu.rs  mod.rs  package_managers.rs
