[package]
name = "arch-tools"
version = "0.1.0"
edition = "2021"
authors = ["Reihone"]
description = "Automated CachyOS/Arch Linux configuration tool"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
colored = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"

[[bin]]
name = "arch-tools"
path = "src/main.rs"
